updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Software Engineer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Wichita, KS</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing chess and piano.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Enineer at a major company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Garland, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web development has many opportunities and problems to solve.</p>
     </section>
 
     <footer id="footer">
