--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Playing chess and piano.</p>
       <h1>What's your dream job?</h1>
-      <p>Software Enineer at a major company.</p>
+      <p>Software Engineer at a major company.</p>
       <h1>Where do you live?</h1>
       <p>Garland, TX</p>
       <h1>Why do you want to be a web developer?</h1>
